--- a/vagrantfile
+++ b/vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
 		v.gui = true
 		v.name = "Qtrb"
 		v.customize ["modifyvm", :id, "--cpuexecutioncap", "50"]
-		v.memory = 4024
+		v.memory = 1024
 		v.cpus = 2
 	end
 
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
   	config.vm.box = "ubuntu/xenial64"
 	
 	# Share the script folder
-	config.vm.synced_folder "scripts/", "/home/vagrant/qtrb/scripts"
+	config.vm.synced_folder "scripts/", "/home/vagrant/qtrb/scripts", owner: "vagrant", group: "vagrant"
 
 	# Share the build folder 
 	config.vm.synced_folder "build/", "/opt/qtrb", owner: "vagrant", group: "vagrant"
